--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "^0.71.7",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "upgrade": "^1.1.0",
+    "expo-linear-gradient": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
