--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~48.0.15",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "^0.71.7",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-vector-icons": "^9.2.0",
-    "upgrade": "^1.1.0",
-    "expo-linear-gradient": "~12.1.2"
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
